= Changelog
:toc:

== wip v0.28.0: Extend ZSHELL support

As the releases before, this release has 100% test coverage.
Tested with 1.14, 1.15, 1.16, 1.17, 1.18, 1.19, 1.20 and 1.21.

=== New Features

* Extend support for ZSHELL when setting `ZSHELL=true` in your environment.
+
ZSHELL completion works by using `bashcompinit` using:
+
----
autoload bashcompinit
bashcompinit
complete -o default -C <tool> <tool>
----
+
Before this release, completions would stop after the `=` symbol because the completion system is targeting bash by default and bash handles `=` as a divider for completions.
By setting `ZSHELL=true` in your environment, the completion system will target zsh and not split completions on `=`.
+
NOTE: I couldn't find a non-explicit reliable way to auto-detect zsh.

== v0.27.0: Breaking changes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16, 1.17, 1.18, 1.19 and 1.20.

=== Breaking

Refactor and rename `HelpSynopsisArgs`

* Rename and allow description:

[source,diff]
----
- opt.HelpSynopsisArgs("name")
+ opt.HelpSynopsisArg("name", "description")
----

* Allow it to be called multiple times.

* Add ARGUMENTS section in help.

=== Minor

* dag: Add extra context in log output.

Add graph name in log entries.
Helpful when using more than one graph (graph of graphs).

* Fix lonesome dash in help and in completion results.

== v0.26.0: New ErrorParsing and minor fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16, 1.17, 1.18 and 1.19.

* Expose ErrorParsing as a generic error

The ErrorParsing error indicates there was a problem parsing the cli args.

This can be used for example, to print the help only in cases where the user didn't enter valid cli args.

* Refactor dag package tests to remove most sleeps.

* Bug fix: Don't check for required options when the help option is passed

== v0.25.3: Minor Fixes
