@@ -28,14 +28,14 @@ package main
 
 import (
 	"fmt"
-	"io/ioutil"
+	"io"
 	"log"
 	"os"
 
 	"github.com/DavidGamba/go-getoptions"
 )
 
-var logger = log.New(ioutil.Discard, "DEBUG: ", log.LstdFlags)
+var logger = log.New(io.Discard, "DEBUG: ", log.LstdFlags)
 
 func main() {
 	var debug bool
