@@ -4,7 +4,11 @@
 == wip v0.28.0: Extend ZSHELL support
 
 As the releases before, this release has 100% test coverage.
-Tested with 1.14, 1.15, 1.16, 1.17, 1.18, 1.19, 1.20 and 1.21.
+Tested with 1.16, 1.17, 1.18, 1.19, 1.20 and 1.21.
+
+=== Breaking
+
+Dropping support for Go 1.14 and 1.15 to stop using deprecated `io/ioutil.Discard`.
 
 === New Features
 
